# onix-splitter

./: README.md  pyproject.toml
src/onix_splitter/: __main__.py  cli.py  splitter.py  utils.py
