[tool.poetry]
name = "onix-splitter"
version = "0.1.0"
description = "Tool splitting large ONIX collections into 1-item collections."
authors = ["Viacheslav Bessonov <viacheslav.bessonov@hilbertteam.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
